--- a/StackingStones/StackingStones/StackingStones.csproj
+++ b/StackingStones/StackingStones/StackingStones.csproj
@@ -53,6 +53,7 @@
     <Compile Include="GameObjects\Sprite.cs" />
     <Compile Include="GameObjects\SpriteAnimations.cs" />
     <Compile Include="GameObjects\TextBox.cs" />
+    <Compile Include="Input\KeyboardHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\IScreen.cs" />
@@ -91,7 +92,13 @@
     <Content Include="Content\Samples\circle3.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Samples\dw.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Samples\sampleCharacters.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Samples\sampleCharacters2.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Samples\testBackground.jpg">
