--- a/StackingStones/StackingStones/StackingStones.csproj
+++ b/StackingStones/StackingStones/StackingStones.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Screens\Scene4_WalkingInWoods.cs" />
     <Compile Include="Screens\Scene5a_SquirrelMiniGame.cs" />
     <Compile Include="Screens\Scene5b_HiddenAnimalsMiniGame.cs" />
+    <Compile Include="Screens\Scene6_StackedStones.cs" />
     <Compile Include="Screens\ScreenBase.cs" />
     <Compile Include="Screens\TestScreen.cs" />
     <Compile Include="Screens\TestScreenAnimation.cs" />
@@ -107,6 +108,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Backgrounds\Placeholders\houseInterior.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Backgrounds\Placeholders\stackedStones.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Backgrounds\Placeholders\walkingInWoods.jpg">
