--- a/StackingStones/StackingStones/StackingStones.csproj
+++ b/StackingStones/StackingStones/StackingStones.csproj
@@ -130,6 +130,9 @@
     <Content Include="Content\Backgrounds\Placeholders\woodMaze.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Backgrounds\woodMaze.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\blip.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -175,19 +178,19 @@
     <Content Include="Content\MiniGames\WoodMaze\bear.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\MiniGames\WoodMaze\leftStones.jpg">
+    <Content Include="Content\MiniGames\WoodMaze\leftStones.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\MiniGames\WoodMaze\rightStones.jpg">
+    <Content Include="Content\MiniGames\WoodMaze\rightStones.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\MiniGames\WoodMaze\topStones.jpg">
+    <Content Include="Content\MiniGames\WoodMaze\topStones.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\MiniGames\WoodMaze\trash.jpg">
+    <Content Include="Content\MiniGames\WoodMaze\trash.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\MiniGames\WoodMaze\wolf.jpg">
+    <Content Include="Content\MiniGames\WoodMaze\wolf.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Music\213893_misterious_classical_filmm.mp3">
